<resources>
    <string name="app_name">TelegramClone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat">Диалоги</string>
    <string name="menu_create_group">Создать группу</string>
    <string name="menu_create_secret_chat">Создать секретный чат</string>
    <string name="menu_create_channel">Создать канал</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_calls">Звонки</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_invite_friends">Пригласить друзей</string>
    <string name="menu_questions_about_telegram">Вопросы о Telegram</string>

    <string name="settings_default_username">Дядя Петя</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79507852555</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Bankylol</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="enter_verification_code">Введите код подтверждения</string>
</resources>