<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.borshevskiy.telegramclone.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_create_group"
        android:name="com.borshevskiy.telegramclone.ui.createGroup.CreateGroupFragment"
        android:label="@string/menu_create_group"
        tools:layout="@layout/fragment_create_group" />

    <fragment
        android:id="@+id/nav_create_secret_chat"
        android:name="com.borshevskiy.telegramclone.ui.createSecretChat.CreateSecretChatFragment"
        android:label="@string/menu_create_secret_chat"
        tools:layout="@layout/fragment_create_secret_chat" />
    <fragment
        android:id="@+id/nav_create_channel"
        android:name="com.borshevskiy.telegramclone.ui.createChannel.CreateChannelFragment"
        android:label="@string/menu_create_channel"
        tools:layout="@layout/fragment_create_channel" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.borshevskiy.telegramclone.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_calls"
        android:name="com.borshevskiy.telegramclone.ui.calls.CallsFragment"
        android:label="@string/menu_calls"
        tools:layout="@layout/fragment_calls" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.borshevskiy.telegramclone.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.borshevskiy.telegramclone.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_invite_friends"
        android:name="com.borshevskiy.telegramclone.ui.invite_friends.InviteFriendsFragment"
        android:label="@string/menu_invite_friends"
        tools:layout="@layout/fragment_invite_friends" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.borshevskiy.telegramclone.ui.about.AboutFragment"
        android:label="@string/menu_questions_about_telegram"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_enterCode"
        android:name="com.borshevskiy.telegramclone.ui.regEnter.EnterCodeFragment"
        android:label="@string/enter_verification_code"
        tools:layout="@layout/fragment_enter_code" />
    <fragment
        android:id="@+id/nav_enterPhoneNumber"
        android:name="com.borshevskiy.telegramclone.ui.regEnter.EnterPhoneNumberFragment"
        android:label="@string/register_toast_enter_phone"
        tools:layout="@layout/fragment_enter_phone_number" />
</navigation>